# learnc

./: CMakeLists.txt  README.md  main.c
ex00/: ft_putchar.c
ex01/: ft_print_alphabet.c
ex02/: ft_print_reverse_alphabet.c
ex03/: ft_print_numbers.c
ex04/: ft_is_negative.c
ex05/: ft_print_comb.c
ex06/: ft_print_comb2.c
ex08/: ft_print_combn.c  ft_print_combn.h
headers/: ft_is_negative.h  ft_print_alphabet.h  ft_print_comb.h  ft_print_comb2.h  ft_print_combn.h  ft_print_reverse_alphabet.h
